<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_bg"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/action_bar"
        android:background="@drawable/top_bar_bg" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:clickable="true"
            android:drawableLeft="@drawable/btn_back"
            android:drawablePadding="0dp"
            android:gravity="center_vertical"
            android:onClick="onBackAction"
            android:text="@string/back"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/title_tv"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/action_bar_item_heigt"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:orientation="horizontal"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:clickable="true"
            android:contentDescription="@string/app_name"
            android:focusable="true"
            android:onClick="onShareAction"
            android:scaleType="fitXY"
            android:src="@drawable/share_icon" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <ImageView
                    android:id="@+id/app_iv"
                    android:layout_width="@dimen/main_app_icon_size"
                    android:layout_height="@dimen/main_app_icon_size"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:contentDescription="@string/app_name"
                    android:scaleType="fitXY"
                    android:src="@drawable/loading" />

                <Button
                    android:id="@+id/app_install_btn"
                    android:layout_width="@dimen/install_btn_width"
                    android:layout_height="@dimen/install_btn_height"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/orange_border_btn"
                    android:text="@string/install"
                    android:onClick="onInsallAction"
                    android:textColor="@color/orange" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="5dp"
                    android:layout_toRightOf="@+id/app_iv"
                    android:layout_toLeftOf="@+id/app_install_btn"
                    android:orientation="vertical"
                    android:onClick="onInsallAction" >

                    <TextView
                        android:id="@+id/app_size_and_company"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/login_tab_text_gray"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/app_name_tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:paddingTop="3dp"
                        android:textColor="@color/black"
                        android:textSize="18sp" />
                </LinearLayout>
            </RelativeLayout>

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:scrollbars="none" >

                <LinearLayout
                    android:id="@+id/snap_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal" >
                </LinearLayout>
            </HorizontalScrollView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/leyu_yellow"
                android:gravity="center_vertical"
                android:padding="10dp"
                android:text="@string/app_intro"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/app_describe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:padding="12dp"
                android:textColor="@color/dark_gray"
                android:textSize="16sp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>